# Syncle

./: .gitignore  Cargo.toml  README.md  database.json
src/: main.rs
test/C/: SyncDB.json
