[package]
name = "syncle"
version = "0.1.0"
authors = ["(ง •_•)ง <miswanting@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = { version = "1.0.97", features = ["derive"] }
serde_yaml = "0.8.9"
serde_json = "1.0.40"